<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.test6.presenter.home.HomePageFragment"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/transparent"
        android:text="@string/log_out"
        android:textAppearance="@style/log_out_btn"
        android:drawableStart="@drawable/ic_logout_24"
        android:paddingHorizontal="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"/>

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/screen_header"/>

    <TextView
        android:id="@+id/tvTransactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_transactions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHome"
        android:layout_marginTop="68dp"
        android:textAppearance="@style/list_header"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransactions"
        android:background="@color/black"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTransaction"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransactions"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTransactions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>