<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.passcode.PasswordFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_screen"
        android:textAppearance="@style/security_sc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/tvEnterPassCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_passcode"
        android:textAppearance="@style/enter_your_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        android:layout_marginTop="68dp"/>

    <LinearLayout
        android:id="@+id/pinCircles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnterPassCode">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/circle1"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="20dp"
            android:background="@drawable/pin_empty_dot" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/circle2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="20dp"
            android:background="@drawable/pin_empty_dot" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/circle3"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="20dp"
            android:background="@drawable/pin_empty_dot" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/circle4"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_margin="20dp"
            android:background="@drawable/pin_empty_dot" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnterPassCode"
        app:layout_constraintBottom_toTopOf="@id/tvForgotPassword"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>



    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="22dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/elipse3"
        android:layout_marginTop="-10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/elipse1"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/elipse2"
        android:layout_marginBottom="-30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterPassCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>